# AttrMagic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  ruff.toml  tox.toml
.github/workflows/: check.yaml  publish.yml  workflow.yml
src/attrmagic/: __about__.py  __init__.py  core.py  models.py  operators.py  sentinels.py  utils.py
tests/: smoke_test.py  test_core.py  test_models.py  test_operator_enum.py  test_operator_funcs.py  test_operators.py  test_package.py  test_utils.py
