[project]
name = "AttrMagic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    { name = "Karl Wooster", email = "karl@woostertech.com" }
]
keywords = ["pydantic", "path", "attributes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
]

[project.urls]
Repository = "https://github.com/WoosterTech/AttrMagic.git"
Issues = "https://github.com/WoosterTech/AttrMagic/issues"
Changelog = "https://github.com/WoosterTech/AttrMagic/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/attrmagic/__about__.py"

[tool.uv]
managed = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = ["src/attrmagic/__about__.py:__version__"]

[tool.pytest.ini_options]
minversion = "6.0"
python_files = ["tests.py", "test_*.py"]
addopts = "--cov=attrmagic --cov-report html"

[tool.mypy-mycode.tests]
ignore_errors = true

[tool.coverage.report]
exclude_also = ["except ImportError:"]

[dependency-groups]
dev = [
    "commitizen>=4.1.1",
    "deptry>=0.23.0",
    "icecream>=2.1.4",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.3",
]
test = [
    "polyfactory>=2.19.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
]
docs = [
    "mkdocs>=1.6.1",
]
